--- a/public/how-this-blog-works.html
+++ b/public/how-this-blog-works.html
@@ -206,29 +206,29 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org27cde14">How this blog works</a>
+<li><a href="#org3ba50e9">How this blog works</a>
 <ul>
-<li><a href="#orgabc173b">Org mode</a></li>
+<li><a href="#org00c0d6d">Org mode</a></li>
 </ul>
 </li>
-<li><a href="#orgc77f369">Github pages</a></li>
-<li><a href="#org24445a5">Why I like this</a></li>
-<li><a href="#org4d0ddee">Thanks</a></li>
+<li><a href="#org643ec12">Github pages</a></li>
+<li><a href="#org431c28f">Why I like this</a></li>
+<li><a href="#orgce97dbe">Thanks</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org27cde14" class="outline-2">
-<h2 id="org27cde14">How this blog works</h2>
-<div class="outline-text-2" id="text-org27cde14">
+<div id="outline-container-org3ba50e9" class="outline-2">
+<h2 id="org3ba50e9">How this blog works</h2>
+<div class="outline-text-2" id="text-org3ba50e9">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
 nicely.
 </p>
 </div>
-<div id="outline-container-orgabc173b" class="outline-3">
-<h3 id="orgabc173b">Org mode</h3>
-<div class="outline-text-3" id="text-orgabc173b">
+<div id="outline-container-org00c0d6d" class="outline-3">
+<h3 id="org00c0d6d">Org mode</h3>
+<div class="outline-text-3" id="text-org00c0d6d">
 <p>
 <a href="https://orgmode.org/">org</a> is a markup format that is associated with Emacs. The plaintext is very readable and there are some nice features for it built into Emacs. One such feature is the capability to render it to HTML.
 </p>
@@ -278,25 +278,25 @@ I have a directory called <code>content</code> which I keep all the <code>.org</
 </div>
 </div>
 </div>
-<div id="outline-container-orgc77f369" class="outline-2">
-<h2 id="orgc77f369">Github pages</h2>
-<div class="outline-text-2" id="text-orgc77f369">
+<div id="outline-container-org643ec12" class="outline-2">
+<h2 id="org643ec12">Github pages</h2>
+<div class="outline-text-2" id="text-org643ec12">
 <p>
 With a few click <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-github-pages-site">Github Pages</a> can be set up to serve static content in a repo. It detects the <code>index.html</code>, which is made from the <code>index.org</code> file, which then links to the other files. You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>.
 </p>
 </div>
 </div>
-<div id="outline-container-org24445a5" class="outline-2">
-<h2 id="org24445a5">Why I like this</h2>
-<div class="outline-text-2" id="text-org24445a5">
+<div id="outline-container-org431c28f" class="outline-2">
+<h2 id="org431c28f">Why I like this</h2>
+<div class="outline-text-2" id="text-org431c28f">
 <p>
 I've tried various platforms and static site blog generators (Jekyll, Hugo), as well as building more complicated things from scratch in ClojureScript. These all felt they had too much unnecessary complexity. I considered going fully the other way - just writing it directly into HTML. That's tempting but it's just a bit too unpleasant to read while writing, and a little bit less portable if I want to change to another system in the future. This a happy compromise where it's pretty transparent and flexible while staying really simple.
 </p>
 </div>
 </div>
-<div id="outline-container-org4d0ddee" class="outline-2">
-<h2 id="org4d0ddee">Thanks</h2>
-<div class="outline-text-2" id="text-org4d0ddee">
+<div id="outline-container-orgce97dbe" class="outline-2">
+<h2 id="orgce97dbe">Thanks</h2>
+<div class="outline-text-2" id="text-orgce97dbe">
 <p>
 This was pretty much copied from the <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a> website. So thanks to David over there for that and all his great content about Emacs.
 </p>
