--- a/public/index.html
+++ b/public/index.html
@@ -225,6 +225,12 @@ hi im luke this is my blog and stuff i made
 </thead>
 <tbody>
 <tr>
+<td class="org-left"><a href="https://clojurecivitas.github.io/earth_observation/waterquality.html">remote sensing water</a></td>
+<td class="org-left">earth observation, water quality</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2025-09-28 Sun]</span></span></td>
+</tr>
+
+<tr>
 <td class="org-left"><a href="milkweed.html">milkweed and mimicry</a></td>
 <td class="org-left">biology</td>
 <td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2025-09-08 Mon]</span></span></td>
@@ -395,7 +401,7 @@ hi im luke this is my blog and stuff i made
 </table>
 
 
-<div id="orgea31617" class="figure">
+<div id="orgeb470a1" class="figure">
 <p><img src="images/waveforms.png" alt="waveforms.png" width="150" />
 </p>
 </div>
