--- a/public/milkweed.html
+++ b/public/milkweed.html
@@ -206,20 +206,20 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgbfd60b3">Milkweed</a></li>
-<li><a href="#org0256ace">Cardiac Glycosides</a></li>
-<li><a href="#orge473461">The Monarch Butterfly</a></li>
-<li><a href="#orgccf067f">The Viceroy Butterfly</a></li>
-<li><a href="#org1e631cd">Batesian Mimicry</a></li>
-<li><a href="#orga9ac406">Müllerian Mimicry</a></li>
+<li><a href="#orge626a24">Milkweed</a></li>
+<li><a href="#orgc7c5fb0">Cardiac Glycosides</a></li>
+<li><a href="#orgdcdf7c9">The Monarch Butterfly</a></li>
+<li><a href="#org72028cf">The Viceroy Butterfly</a></li>
+<li><a href="#org33f5697">Batesian Mimicry</a></li>
+<li><a href="#orgfbd4f5c">Müllerian Mimicry</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgbfd60b3" class="outline-2">
-<h2 id="orgbfd60b3">Milkweed</h2>
-<div class="outline-text-2" id="text-orgbfd60b3">
+<div id="outline-container-orge626a24" class="outline-2">
+<h2 id="orge626a24">Milkweed</h2>
+<div class="outline-text-2" id="text-orge626a24">
 
-<div id="org0ab4060" class="figure">
+<div id="orga4ee1ee" class="figure">
 <p><img src="images/milkweed.jpg" alt="milkweed.jpg" />
 </p>
 </div>
@@ -229,21 +229,21 @@ Milkweed is a perennial plant abundant in Africa and the Americas. The genus is 
 </p>
 
 
-<div id="org7472d6b" class="figure">
+<div id="org13ebf00" class="figure">
 <p><img src="images/Star_of_life2.svg.png" alt="Star_of_life2.svg.png" />
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org0256ace" class="outline-2">
-<h2 id="org0256ace">Cardiac Glycosides</h2>
-<div class="outline-text-2" id="text-org0256ace">
+<div id="outline-container-orgc7c5fb0" class="outline-2">
+<h2 id="orgc7c5fb0">Cardiac Glycosides</h2>
+<div class="outline-text-2" id="text-orgc7c5fb0">
 <p>
 Milkweeds produce a latex containing cardiac glycosides, a bitter-tasting toxin, as protection against herbivores. These compounds are more concentrated in the parts of the plants that animals would eat (leaves, stems, seeds).
 </p>
 
 
-<div id="org6488bc0" class="figure">
+<div id="org8274a69" class="figure">
 <p><img src="images/Cardiac_glycoside.png" alt="Cardiac_glycoside.png" />
 </p>
 </div>
@@ -257,11 +257,11 @@ Preexisting steroid synthesis pathways that serve other functions like hormone p
 </p>
 </div>
 </div>
-<div id="outline-container-orge473461" class="outline-2">
-<h2 id="orge473461">The Monarch Butterfly</h2>
-<div class="outline-text-2" id="text-orge473461">
+<div id="outline-container-orgdcdf7c9" class="outline-2">
+<h2 id="orgdcdf7c9">The Monarch Butterfly</h2>
+<div class="outline-text-2" id="text-orgdcdf7c9">
 
-<div id="org8702e41" class="figure">
+<div id="org337d077" class="figure">
 <p><img src="images/Monarch.jpg" alt="Monarch.jpg" />
 </p>
 </div>
@@ -275,11 +275,11 @@ The distinctively coloured monarch butterfly, named after King William III aka W
 </p>
 </div>
 </div>
-<div id="outline-container-orgccf067f" class="outline-2">
-<h2 id="orgccf067f">The Viceroy Butterfly</h2>
-<div class="outline-text-2" id="text-orgccf067f">
+<div id="outline-container-org72028cf" class="outline-2">
+<h2 id="org72028cf">The Viceroy Butterfly</h2>
+<div class="outline-text-2" id="text-org72028cf">
 
-<div id="org2c95ef2" class="figure">
+<div id="org85a79ad" class="figure">
 <p><img src="images/viceroy.jpg" alt="viceroy.jpg" />
 </p>
 </div>
@@ -289,11 +289,11 @@ The viceroy looks somewhat similar to the monarch but it does not have the adapt
 </p>
 </div>
 </div>
-<div id="outline-container-org1e631cd" class="outline-2">
-<h2 id="org1e631cd">Batesian Mimicry</h2>
-<div class="outline-text-2" id="text-org1e631cd">
+<div id="outline-container-org33f5697" class="outline-2">
+<h2 id="org33f5697">Batesian Mimicry</h2>
+<div class="outline-text-2" id="text-org33f5697">
 
-<div id="orgcdf54fb" class="figure">
+<div id="org95127f3" class="figure">
 <p><img src="images/bates.jpg" alt="bates.jpg" />
 </p>
 </div>
@@ -303,11 +303,11 @@ In 1848 two English amateur entomologists, Henry Walter Bates and Alfred Russel 
 </p>
 </div>
 </div>
-<div id="outline-container-orga9ac406" class="outline-2">
-<h2 id="orga9ac406">Müllerian Mimicry</h2>
-<div class="outline-text-2" id="text-orga9ac406">
+<div id="outline-container-orgfbd4f5c" class="outline-2">
+<h2 id="orgfbd4f5c">Müllerian Mimicry</h2>
+<div class="outline-text-2" id="text-orgfbd4f5c">
 
-<div id="org18e4a1e" class="figure">
+<div id="orgc1c9e4b" class="figure">
 <p><img src="images/Franzmuller.jpg" alt="Franzmuller.jpg" />
 </p>
 </div>
