--- a/public/atman_construct_eps.html
+++ b/public/atman_construct_eps.html
@@ -206,13 +206,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8be7694">Atman Construct EPs</a></li>
+<li><a href="#org30229bc">Atman Construct EPs</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org8be7694" class="outline-2">
-<h2 id="org8be7694">Atman Construct EPs</h2>
-<div class="outline-text-2" id="text-org8be7694">
+<div id="outline-container-org30229bc" class="outline-2">
+<h2 id="org30229bc">Atman Construct EPs</h2>
+<div class="outline-text-2" id="text-org30229bc">
 <p>
 Links to my music made between 2012 and 1016
 </p>
