--- a/public/augustiner_braugasthof.html
+++ b/public/augustiner_braugasthof.html
@@ -205,13 +205,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7e00782">Augustiner Braugasthof</a></li>
+<li><a href="#orgc070d74">Augustiner Braugasthof</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org7e00782" class="outline-2">
-<h2 id="org7e00782">Augustiner Braugasthof</h2>
-<div class="outline-text-2" id="text-org7e00782">
+<div id="outline-container-orgc070d74" class="outline-2">
+<h2 id="orgc070d74">Augustiner Braugasthof</h2>
+<div class="outline-text-2" id="text-orgc070d74">
 <p class="verse">
 Clay cups carrying cold beer.<br />
 Rapport ripples round the tavern.<br />
