--- a/public/cljs-openlayers.html
+++ b/public/cljs-openlayers.html
@@ -206,15 +206,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org509ea13">Making a geo PWA with CLJS and Openlayers</a>
+<li><a href="#org40b2c66">Making a geo PWA with CLJS and Openlayers</a>
 <ul>
-<li><a href="#org737e983">Motivation</a></li>
-<li><a href="#org7afff27">Shadow-cljs setup</a></li>
-<li><a href="#org8062c1c">Adding Openlayers</a></li>
-<li><a href="#org6176105">Turning it into a PWA</a>
+<li><a href="#org85c4240">Motivation</a></li>
+<li><a href="#org8369b2f">Shadow-cljs setup</a></li>
+<li><a href="#orge28cf45">Adding Openlayers</a></li>
+<li><a href="#orgccb1ba3">Turning it into a PWA</a>
 <ul>
-<li><a href="#org11df662">Icons</a></li>
-<li><a href="#org28b5ffa">Manifest</a></li>
+<li><a href="#org385cc27">Icons</a></li>
+<li><a href="#org332e73d">Manifest</a></li>
 </ul>
 </li>
 </ul>
@@ -222,13 +222,13 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org509ea13" class="outline-2">
-<h2 id="org509ea13">Making a geo PWA with CLJS and Openlayers</h2>
-<div class="outline-text-2" id="text-org509ea13">
+<div id="outline-container-org40b2c66" class="outline-2">
+<h2 id="org40b2c66">Making a geo PWA with CLJS and Openlayers</h2>
+<div class="outline-text-2" id="text-org40b2c66">
 </div>
-<div id="outline-container-org737e983" class="outline-3">
-<h3 id="org737e983">Motivation</h3>
-<div class="outline-text-3" id="text-org737e983">
+<div id="outline-container-org85c4240" class="outline-3">
+<h3 id="org85c4240">Motivation</h3>
+<div class="outline-text-3" id="text-org85c4240">
 <p>
 We want to make a quick and easy map based app. ClojureScript is the natural choice for me. Maybe this would be a good application for <a href="https://github.com/squint-cljs/squint">Squint</a> though, I haven't tried that yet. Another article perhaps.
 </p>
@@ -242,9 +242,9 @@ The choice of Progressive Web App is motivated by not wanting to have to write p
 </p>
 </div>
 </div>
-<div id="outline-container-org7afff27" class="outline-3">
-<h3 id="org7afff27">Shadow-cljs setup</h3>
-<div class="outline-text-3" id="text-org7afff27">
+<div id="outline-container-org8369b2f" class="outline-3">
+<h3 id="org8369b2f">Shadow-cljs setup</h3>
+<div class="outline-text-3" id="text-org8369b2f">
 <p>
 The first part of this setup is based on the shadow-cljs docs. If you encounter problems along the way then refer back to the <a href="https://github.com/thheller/shadow-cljs?tab=readme-ov-file#quick-start">shadow-cljs quickstart guide</a>. 
 </p>
@@ -337,9 +337,9 @@ This should trigger a build. We should have a connected app at <a href="http://l
 </p>
 </div>
 </div>
-<div id="outline-container-org8062c1c" class="outline-3">
-<h3 id="org8062c1c">Adding Openlayers</h3>
-<div class="outline-text-3" id="text-org8062c1c">
+<div id="outline-container-orge28cf45" class="outline-3">
+<h3 id="orge28cf45">Adding Openlayers</h3>
+<div class="outline-text-3" id="text-orge28cf45">
 <p>
 Interrupt the <code>shadow-cljs watch</code> process in the terminal with Ctrl-C, and then install Openlayers with <code>npm</code>:
 </p>
@@ -436,9 +436,9 @@ Now you should have an app with an interactive map. Clearly the buttons and attr
 </p>
 </div>
 </div>
-<div id="outline-container-org6176105" class="outline-3">
-<h3 id="org6176105">Turning it into a PWA</h3>
-<div class="outline-text-3" id="text-org6176105">
+<div id="outline-container-orgccb1ba3" class="outline-3">
+<h3 id="orgccb1ba3">Turning it into a PWA</h3>
+<div class="outline-text-3" id="text-orgccb1ba3">
 <p>
 We want to allow the user to install this in their device such that it seems like any other app. To get this capability we need to turn it into a progressive web app. While essentially just a web app, a PWA typically has a few extra ingredients:
 </p>
@@ -448,15 +448,15 @@ We want to allow the user to install this in their device such that it seems lik
 <li>a service worker - This does the work of caching certain resources, allowing for offline usage. A service worker is actually optional so we'll skip it in this guide, but look into it.</li>
 </ul>
 </div>
-<div id="outline-container-org11df662" class="outline-4">
-<h4 id="org11df662">Icons</h4>
-<div class="outline-text-4" id="text-org11df662">
+<div id="outline-container-org385cc27" class="outline-4">
+<h4 id="org385cc27">Icons</h4>
+<div class="outline-text-4" id="text-org385cc27">
 <p>
 Let's start with the icons. Here's a lazy method: get an LLM to generate a vector image so it's nice and clean (at time of writing Claude is nice for this because it will write the SVG in code and then render a preview). Screenshot that at a reasonable resolution (tip: tell Claude to draw the logo such that it is inside a square with a black outline. That way you can select an almost exact square easily)
 </p>
 
 
-<div id="org77fdcdd" class="figure">
+<div id="orge8e990f" class="figure">
 <p><img src="images/claude-compass.png" alt="claude-compass.png" />
 </p>
 </div>
@@ -474,9 +474,9 @@ There should be three directories of icons for different platforms and an <code>
 </p>
 </div>
 </div>
-<div id="outline-container-org28b5ffa" class="outline-4">
-<h4 id="org28b5ffa">Manifest</h4>
-<div class="outline-text-4" id="text-org28b5ffa">
+<div id="outline-container-org332e73d" class="outline-4">
+<h4 id="org332e73d">Manifest</h4>
+<div class="outline-text-4" id="text-org332e73d">
 <p>
 We already have the icons in our manifest. We need to add a few other things.
 </p>
@@ -521,7 +521,7 @@ Now we should have a functioning PWA. If you are using Chrome for example you sh
 </p>
 
 
-<div id="org2edb1b4" class="figure">
+<div id="orgbbf45cb" class="figure">
 <p><img src="images/download-pwa.png" alt="download-pwa.png" />
 </p>
 </div>
