--- a/public/dft.html
+++ b/public/dft.html
@@ -238,26 +238,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org11f341e">Discrete Fourier Transform</a>
+<li><a href="#org0efe88c">Discrete Fourier Transform</a>
 <ul>
-<li><a href="#orgd72d960">A Roundabout Introduction</a>
+<li><a href="#orga19a8fa">A Roundabout Introduction</a>
 <ul>
-<li><a href="#org2653353">Sinusoids, circles and epicycles</a></li>
-<li><a href="#orgee48dd3">Amplitude and Phase</a></li>
+<li><a href="#org09a58cb">Sinusoids, circles and epicycles</a></li>
+<li><a href="#org58e3aa7">Amplitude and Phase</a></li>
 </ul>
 </li>
-<li><a href="#org5c631f1">Imaginary and Complex Numbers</a></li>
-<li><a href="#org9895f1c">Euler's Number</a>
+<li><a href="#org0860ad3">Imaginary and Complex Numbers</a></li>
+<li><a href="#orge52d5c0">Euler's Number</a>
 <ul>
-<li><a href="#org42e9fd8">Growth</a></li>
+<li><a href="#org221ec65">Growth</a></li>
 <li><a href="#imaginary-growth-is-anticlockwise-rotation">Imaginary Growth is Anticlockwise Rotation</a></li>
 </ul>
 </li>
-<li><a href="#org4d48b12">Complex sinusoid</a></li>
-<li><a href="#orgd2d373f">The Discrete Fourier Transform</a>
+<li><a href="#orgc286afc">Complex sinusoid</a></li>
+<li><a href="#org5305528">The Discrete Fourier Transform</a>
 <ul>
-<li><a href="#org131fcbb">Why are we multiplying our input signal by sinusoids?</a></li>
-<li><a href="#orge93576e">Examples</a></li>
+<li><a href="#org6fa3206">Why are we multiplying our input signal by sinusoids?</a></li>
+<li><a href="#org183dce4">Examples</a></li>
 </ul>
 </li>
 <li><a href="#some-properties-of-the-dft">Some Properties of the DFT</a></li>
@@ -267,9 +267,9 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org11f341e" class="outline-2">
-<h2 id="org11f341e">Discrete Fourier Transform</h2>
-<div class="outline-text-2" id="text-org11f341e">
+<div id="outline-container-org0efe88c" class="outline-2">
+<h2 id="org0efe88c">Discrete Fourier Transform</h2>
+<div class="outline-text-2" id="text-org0efe88c">
 <p>
 This is just my understanding / intuitive explanation of what this algorithm means.
 </p>
@@ -301,9 +301,9 @@ What we will see is that this question is really the same question as:
 and phase?"</i></li>
 </ul>
 </div>
-<div id="outline-container-orgd72d960" class="outline-3">
-<h3 id="orgd72d960">A Roundabout Introduction</h3>
-<div class="outline-text-3" id="text-orgd72d960">
+<div id="outline-container-orga19a8fa" class="outline-3">
+<h3 id="orga19a8fa">A Roundabout Introduction</h3>
+<div class="outline-text-3" id="text-orga19a8fa">
 <p>
 <a href="https://en.wikipedia.org/wiki/Joseph_Fourier">Joseph Fourier</a>
 was a French mathematician who was doing his thing at the end of the 18th to
@@ -316,9 +316,9 @@ essentially a the recipe of a signal, where the raw ingredients are
 sinusoids.
 </p>
 </div>
-<div id="outline-container-org2653353" class="outline-4">
-<h4 id="org2653353">Sinusoids, circles and epicycles</h4>
-<div class="outline-text-4" id="text-org2653353">
+<div id="outline-container-org09a58cb" class="outline-4">
+<h4 id="org09a58cb">Sinusoids, circles and epicycles</h4>
+<div class="outline-text-4" id="text-org09a58cb">
 <p>
 Let's start by thinking of a sinusoid as an aspect of circular movement
 in relation to time. As we probably all learned in school at some stage,
@@ -329,7 +329,7 @@ in the unit circle, like this:
 </p>
 
 
-<div id="orgcc98a8a" class="figure">
+<div id="org5280e73" class="figure">
 <p><img src="images/4.1.gif" alt="4.1.gif" align="center" />
 </p>
 </div>
@@ -340,7 +340,7 @@ elaborate periodic signals, like so:
 </p>
 
 
-<div id="orgfc95dda" class="figure">
+<div id="orgb045655" class="figure">
 <p><img src="images/4.2.gif" alt="4.2.gif" align="center" />
 </p>
 </div>
@@ -386,7 +386,7 @@ a fixed deferent.
 </blockquote>
 
 
-<div id="org22abe54" class="figure">
+<div id="orgc8b53bd" class="figure">
 <p><img src="images/4.3.jpg" alt="4.3.jpg" align="center" />
 </p>
 </div>
@@ -408,9 +408,9 @@ here, and the end result is intuitive.
 </p>
 </div>
 </div>
-<div id="outline-container-orgee48dd3" class="outline-4">
-<h4 id="orgee48dd3">Amplitude and Phase</h4>
-<div class="outline-text-4" id="text-orgee48dd3">
+<div id="outline-container-org58e3aa7" class="outline-4">
+<h4 id="org58e3aa7">Amplitude and Phase</h4>
+<div class="outline-text-4" id="text-org58e3aa7">
 <p>
 What we do need is a method to find out <b>which sinusoids</b> are in a given
 signal. Just the frequency of those sinusoids isn't enough information.
@@ -425,7 +425,7 @@ Here's a sinusoid with its amplitude being changed:
 
 
 
-<div id="org24cff70" class="figure">
+<div id="org1329428" class="figure">
 <p><img src="images/4.5.gif" alt="4.5.gif" align="center" />
 </p>
 </div>
@@ -435,7 +435,7 @@ And here's one with its phase value being changed:
 </p>
 
 
-<div id="org2dde2da" class="figure">
+<div id="orgbcbe21f" class="figure">
 <p><img src="images/4.4.gif" alt="4.4.gif" align="center" />
 </p>
 </div>
@@ -465,9 +465,9 @@ of the article
 </div>
 </div>
 </div>
-<div id="outline-container-org5c631f1" class="outline-3">
-<h3 id="org5c631f1">Imaginary and Complex Numbers</h3>
-<div class="outline-text-3" id="text-org5c631f1">
+<div id="outline-container-org0860ad3" class="outline-3">
+<h3 id="org0860ad3">Imaginary and Complex Numbers</h3>
+<div class="outline-text-3" id="text-org0860ad3">
 <p>
 \[i = \sqrt{−1}\]
 </p>
@@ -511,7 +511,7 @@ usually done with the x-axis as real and the y-axis as imaginary. Here's
 </p>
 
 
-<div id="org613f2fa" class="figure">
+<div id="orgd295afd" class="figure">
 <p><img src="images/4.6.png" alt="4.6.png" />
 </p>
 </div>
@@ -523,7 +523,7 @@ and angle.
 </p>
 
 
-<div id="orgdc2f33c" class="figure">
+<div id="org81f24eb" class="figure">
 <p><img src="images/4.7.png" alt="4.7.png" />
 </p>
 </div>
@@ -544,9 +544,9 @@ boot up some other concepts we'll need.
 </p>
 </div>
 </div>
-<div id="outline-container-org9895f1c" class="outline-3">
-<h3 id="org9895f1c">Euler's Number</h3>
-<div class="outline-text-3" id="text-org9895f1c">
+<div id="outline-container-orge52d5c0" class="outline-3">
+<h3 id="orge52d5c0">Euler's Number</h3>
+<div class="outline-text-3" id="text-orge52d5c0">
 <p>
 Usually known as simply e, Euler's number is a mathematical constant.
 It's a real,
@@ -556,9 +556,9 @@ because it's intrinsically linked to continuous growth. We can imagine
 how we get to e through an analogy to compound interest.
 </p>
 </div>
-<div id="outline-container-org42e9fd8" class="outline-4">
-<h4 id="org42e9fd8">Growth</h4>
-<div class="outline-text-4" id="text-org42e9fd8">
+<div id="outline-container-org221ec65" class="outline-4">
+<h4 id="org221ec65">Growth</h4>
+<div class="outline-text-4" id="text-org221ec65">
 <p>
 This section seems pretty unrelated at first, but it's actually key to
 understanding the DFT. I should add that this bank loan analogy is just
@@ -716,7 +716,7 @@ perimeter circle exactly one radian. We've rotated it by 1.
 </p>
 
 
-<div id="org10470dc" class="figure">
+<div id="org4ab1604" class="figure">
 <p><img src="images/4.8.png" alt="4.8.png" />
 </p>
 </div>
@@ -728,9 +728,9 @@ The upshot is we can use e to make circles. This is the basis of the
 </div>
 </div>
 </div>
-<div id="outline-container-org4d48b12" class="outline-3">
-<h3 id="org4d48b12">Complex sinusoid</h3>
-<div class="outline-text-3" id="text-org4d48b12">
+<div id="outline-container-orgc286afc" class="outline-3">
+<h3 id="orgc286afc">Complex sinusoid</h3>
+<div class="outline-text-3" id="text-orgc286afc">
 <p>
 The complex sinusoid is really just the sum of two sinusoids, one real
 and one imaginary. These two sinusoids are in <i>phase quadrature</i>, which
@@ -794,7 +794,7 @@ green.
 </p>
 
 
-<div id="org754b30c" class="figure">
+<div id="org81de87b" class="figure">
 <p><img src="images/4.9.gif" alt="4.9.gif" />
 </p>
 </div>
@@ -807,15 +807,15 @@ Using a complex sinusoid helps us keep it all compact and tidy.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd2d373f" class="outline-3">
-<h3 id="orgd2d373f">The Discrete Fourier Transform</h3>
-<div class="outline-text-3" id="text-orgd2d373f">
+<div id="outline-container-org5305528" class="outline-3">
+<h3 id="org5305528">The Discrete Fourier Transform</h3>
+<div class="outline-text-3" id="text-org5305528">
 <p>
 We've got all the bits we need! We're going to just dive in:
 </p>
 
 
-<div id="orgdd32004" class="figure">
+<div id="org5860d5f" class="figure">
 <p><img src="images/4.10.png" alt="4.10.png" />
 </p>
 </div>
@@ -887,7 +887,7 @@ could just as well write in ether of these forms:
 
 
 
-<div id="org58710bd" class="figure">
+<div id="org8f3aa82" class="figure">
 <p><img src="images/4.11.png" alt="4.11.png" />
 </p>
 </div>
@@ -904,9 +904,9 @@ So here's a broad-stroke description:
 You may be asking yourself&#x2026;
 </p>
 </div>
-<div id="outline-container-org131fcbb" class="outline-4">
-<h4 id="org131fcbb">Why are we multiplying our input signal by sinusoids?</h4>
-<div class="outline-text-4" id="text-org131fcbb">
+<div id="outline-container-org6fa3206" class="outline-4">
+<h4 id="org6fa3206">Why are we multiplying our input signal by sinusoids?</h4>
+<div class="outline-text-4" id="text-org6fa3206">
 <p>
 The complex sinusoid is different for each bin. It's frequency is set by
 k. This complex sinusoid hunts for a sinusoid that matches it in our
@@ -922,7 +922,7 @@ Imagine we have a sinusoid A, which is at
 </p>
 
 
-<div id="org1ee2399" class="figure">
+<div id="org8353422" class="figure">
 <p><img src="images/4.sheet1.jpeg" alt="4.sheet1.jpeg" />
 </p>
 </div>
@@ -941,7 +941,7 @@ sinusoid of a different frequency, for example ½ Nyquist frequency:
 </p>
 
 
-<div id="orgec7b3c9" class="figure">
+<div id="orge665e2b" class="figure">
 <p><img src="images/4.sheet4.jpeg" alt="4.sheet4.jpeg" />
 </p>
 </div>
@@ -956,7 +956,7 @@ However, what if we multiply A by a sinusoid with the same frequency?
 </p>
 
 
-<div id="org5e3ff52" class="figure">
+<div id="org629dc33" class="figure">
 <p><img src="images/4.sheet3.jpeg" alt="4.sheet3.jpeg" />
 </p>
 </div>
@@ -977,9 +977,9 @@ through some examples:
 </p>
 </div>
 </div>
-<div id="outline-container-orge93576e" class="outline-4">
-<h4 id="orge93576e">Examples</h4>
-<div class="outline-text-4" id="text-orge93576e">
+<div id="outline-container-org183dce4" class="outline-4">
+<h4 id="org183dce4">Examples</h4>
+<div class="outline-text-4" id="text-org183dce4">
 <p>
 We'll start with a signal to test. Here's a signal made from two
 sinusoids. We'll use the just the real part of the DFT to find out which
@@ -987,7 +987,7 @@ sinusoids.
 </p>
 
 
-<div id="orge21dc41" class="figure">
+<div id="org16649bc" class="figure">
 <p><img src="images/4.12.png" alt="4.12.png" />
 </p>
 </div>
@@ -1048,13 +1048,13 @@ above.
 </p>
 
 
-<div id="org4a5d92b" class="figure">
+<div id="org680c3f5" class="figure">
 <p><img src="images/4.13.png" alt="4.13.png" />
 </p>
 </div>
 
 
-<div id="org503f887" class="figure">
+<div id="orgd9cf822" class="figure">
 <p><img src="images/4.sheet5.jpeg" alt="4.sheet5.jpeg" />
 </p>
 </div>
